# gl2d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dependences.rar  gl2d.sln
gl2d/include/gl2d/: gl2d.h  gl2dParticleSystem.h
gl2d/src/: gl2d.cpp  gl2dParticleSystem.cpp
opengl2DLib/: gl2d.cpp  gl2d.h  gl2dParticleSystem.cpp  gl2dParticleSystem.h  main.cpp  opengl2DLib.vcxproj  opengl2DLib.vcxproj.filters  opengl2Dlib.cpp  opengl2Dlib.h  stb_image.h
resources/: blur.frag  defaultPostProcess.frag  defaultRenderShader.frag  removeColors.frag
src/: main.cpp  mainCustomShader.cpp  mainPostProcess.cpp
